# Betweenness

./: .gitignore  LICENSE.ODBL.md  LICENSE.md  README.md  clean.sh  comparator.py  compile.sh  extract_times.sh  normalization_max.py  postprocess.sh  run_mobility.sh  run_scalability.sh  test.sh
Beta/: beta_m1.txt  beta_m2.txt  beta_m3.txt  beta_m4.txt  beta_m5.txt
Code/: CMakeLists.txt
Code/Betweenness/: Betweenness.cpp  Betweenness.h  BetweennessResult.cpp  BetweennessResult.h  CsvReader.cpp  CsvReader.h  Edge.cpp  Edge.h  KeyValuePair.cpp  KeyValuePair.h  Types.h  Utils.cpp  Utils.h  WeightedDirectedGraph.cpp  WeightedDirectedGraph.h  compile  compile.sh  main.cpp
Code/BetweennessGraphManipulator/: BetweennessGraphManipulator.cs
